--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <title>creative idea</title>
   </head>
   <body>
-    <h1>A.R.N.Mahalakshmi<abbr>arigela renuka naga mahalakshmi</abbbr></h1>
-    <h6>i am ambajipeta</h6>
+    <h1>Devops<abbr>Development team + Operational team</abbbr></h1>
+    <h2>this is devops life cycle</h2>
+    devops-lifecycle-diagram.webp
   </body>
 </html>
