--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <body>
     <h1>Devops<abbr>Development team + Operational team</abbbr></h1>
     <h2>this is devops life cycle</h2>
-    <img src="devops-lifecycle-diagram.webp">
+    <img src=devops-lifecycle-diagram.webp>
   </body>
 </html>
